Finalize Task 2 (Dining Philosphers Problem)

--- a/os/os-exercise-3/task-2/Makefile
+++ b/os/os-exercise-3/task-2/Makefile
@@ -13,3 +13,7 @@ dining.o: dining.c dp.h
 
 philosopher.o: philosopher.c dp.h
 	gcc -lpthread -c philosopher.c -lpthread -fcommon
+
+clean: 
+	rm *.o
+	rm diningphilosophers
